# quack

./: .gitignore  AGENTS.md  DECISIONS.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
quack/: __init__.py  cli.py  core.py  render.py  utils.py
tests/: test_cli.py  test_core.py  test_integration.py  test_render.py  test_utils.py
tests/fixtures/: js_test.html
