[project]
name = "quack"
version = "0.1.1"
requires-python = ">=3.14"
authors = [
    {name = "corvuslee"}
]
description = "DuckDuckGo search with browser impersonation"
readme = "README.md"
license = {text = "MIT"}
dependencies = [
    "html2text>=2025.4.15",
    "primp>=1.1.3",
    "selectolax>=0.4.7",
]

[project.scripts]
quack = "quack.cli:main"

[project.urls]
homepage = "https://github.com/corvuslee/quack"
repository = "https://github.com/corvuslee/quack"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
    "ruff>=0.15.12",
]
